package com.example.learn.design.pattern.han._04创建型模式._02工厂设计模式._01简单工厂模式.pizza;

public class CheesePizza extends Pizza {

    @Override
    public void prepare() {
        // TODO Auto-generated method stub
        System.out.println(" 给制作奶酪披萨 准备原材料 ");
    }

}
